# libfec

./: CMakeLists.txt  README.md
include/: common.h  fec_decode.h  fec_encode.h
lib/: fec.c
samples/: fec_decode_server.cpp  fec_encode_client.cpp  fec_sample.cpp  main.cpp  rs_sample.cpp
source/: common.cpp  fec_decode.cpp  fec_encode.cpp  timeout_map.cpp
